--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="renderer" content="webkit">
+    <meta name="description" content="使用React、Redux、Immutable制作的俄罗斯方块">
+    <meta name="keywords" content="俄罗斯方块,Tetris,React,Redux,Immuatble,JavaScript">
+    <meta name="format-detection" content="telephoune-no">
+    <script>
+        ;(function(){
+            var w=parseInt(window.screen.width),
+            s=w/640;
+            u=navigator.userAgent.toLocaleLowerCase();
+            m='<meta name="viewport" content="width=640,';
+            if(/android(\d+\.\d+)/.test(u){
+                if(parseFloat(RegExp.$1)>2.3){
+                    if(parseFloat(RegExp.$1>2.3)){
+                        m+=`minimum-scale=${s},maximum-scale=${s},`
+                    }
+                    else{
+                        m+='user-scalable=no,';
+                    }
+                    m+='target-desitydpi=device-dpi">';
+                    document.write(m);
+                }
+            }
+        })();
+    </script>
+    <title>FireMan-34 复刻的俄罗斯方块</title>
 </head>
 <body>
-    
+    <div id="root">
+        <div class="load">
+            <div class="loader">
+                加载中...
+            </div>
+        </div>
+    </div>
 </body>
 </html>
