refactor: 💡 change css util and create some emputy component

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             s=w/640;
             u=navigator.userAgent.toLocaleLowerCase();
             m='<meta name="viewport" content="width=640,';
-            if(/android(\d+\.\d+)/.test(u){
+            if(/android(\d+\.\d+)/.test(u)){
                 if(parseFloat(RegExp.$1)>2.3){
                     if(parseFloat(RegExp.$1>2.3)){
                         m+=`minimum-scale=${s},maximum-scale=${s},`
